--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
-  max-width: 100vw;
-  padding: 0rem 4rem 1rem 4rem;
+  max-width: 80vw;
+  margin: 0 auto;
   --spacing: 1rem;
   .inner-footer {
     display: flex;
