--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -36,18 +36,22 @@
   flex-direction: row-reverse;
 }
 
+.section-wrapper {
+  width: 80vw;
+  margin: 0 auto;
+}
 .section1,
 .section2,
 .section3 {
-  width: 90vw;
-  margin: 0px 0px 200px 50px;
+  width: 100%;
+  margin: 0px 0px 200px 0px;
   padding-top: 5rem;
   position: relative;
   z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 150px;
+  gap: 100px;
   .section1-wrapper::before {
     content: "01";
     position: absolute;
@@ -87,7 +91,7 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 30px;
     position: relative;
     .title {
     }
@@ -125,7 +129,7 @@
     width: 100vw;
     flex-direction: column;
     gap: 60px;
-    margin: 0px 0px 150px 0px;
+    margin: 0px 0px 100px 0px;
     .section1-wrapper,
     .section2-wrapper,
     .section3-wrapper {
